--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <p><strong>HeartCare</strong> © {% now 'Y' %}, All Rights Reserved, Design & Developed By Mahmudul Alam</p>
+          <p><strong>HeartCare</strong> © {% now 'Y' %}, All Rights Reserved, Design & Developed By Group 9</p>
         </div>
       </div>
     </div>
