--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -5,8 +5,8 @@
       <div class="row">
         <div class="col-md-6 col-sm-8">
           <ul>
-            <li><i class="fa fa-phone" aria-hidden="true"></i> Call at: <strong>+8801719058105</strong></li>
-            <li><i class="fa fa-envelope-o" aria-hidden="true"></i> Email us: <strong>info@heartcare.com</strong>
+            <li><i class="fa fa-phone" aria-hidden="true"></i> Call at: <strong>+8801843070993</strong></li>
+            <li><i class="fa fa-envelope-o" aria-hidden="true"></i> Email us: <strong>info@pm-system.com</strong>
             </li>
           </ul>
         </div>
@@ -18,16 +18,16 @@
     </div>
   </div>
   <div class="nav-logo-area">
-    <div class="container">
+    <div class="container ">
       <div class="row">
         <div class="col-md-12">
-          <nav class="navbar navbar-default">
+          <nav class="navbar navbar-default navbar-static-top">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                 data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle
                   navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
                   class="icon-bar"></span> </button>
-              <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'heartcare/images/logo.png' %}"
+                  <a class="navbar-brand logo-image" href="{% url 'index' %}"><img src="{% static 'heartcare/images/logo.png' %}"
                   alt=""></a> </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
