--- a/templates/hospital/team-details.html
+++ b/templates/hospital/team-details.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-6">
-          <div class="team-detail-img"> <img src="{{ object.picture.url }}" alt=""> </div>
+          <div class="team-detail-img"> <img class="col-md-10 col-sm-10" src="{{ object.picture.url }}" alt=""> </div>
         </div>
         <div class="col-md-6 col-sm-6">
           <div class="team-details-text">
