--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <div class="widget"> <img class="ft-logo" src="{% static 'heartcare/images/footer-logo.png' %}" alt="">
-            <p>The Heart Care Heart Hospital have latest technology machines with experty Heart specialist doctors
+            <p>The Patient-Management-System have latest technology machines with experty Heart specialist doctors
               consectetur adipisicing elit. Distinctio vitae maiores enim ea atque? Natus iure autem cumque, quaerat
               distinctio pariatur velit illo hic a eos paccusamus. </p>
           </div>
@@ -38,13 +38,12 @@
             <address>
               <ul>
                 <li> <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span> <span
-                    class="add-text"><strong>Main Branch:</strong> Dhanmondi 27, Dhaka</span> </li>
+                    class="add-text"><strong>Main Branch:</strong> Mirpur 2, Dhaka</span> </li>
                 <li> <span class="icon"><i class="fa fa-phone-square" aria-hidden="true"></i></span> <span
-                    class="add-text"><strong>Call us Anytime at:</strong> +8801719058105</span> </li>
+                    class="add-text"><strong>Call us Anytime at:</strong> +8801843070993</span> </li>
                 <li> <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span> <span
-                    class="add-text"><strong>For Inquiry:</strong> info@heartcare.com</span> </li>
-                <li> <span class="icon"><i class="fa fa-clock-o" aria-hidden="true"></i></span> <span
-                    class="add-text"><strong>Our Timings:</strong> Mon-Sat: 9:00am-7:00pm</span> </li>
+                    class="add-text"><strong>For Inquiry:</strong> info@pm-system.com</span> </li>
+               
               </ul>
             </address>
           </div>
@@ -63,7 +62,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <p><strong>HeartCare</strong> © {% now 'Y' %}, All Rights Reserved, Design & Developed By Group 9</p>
+          <p><strong>PM-System</strong> © {% now 'Y' %}, All Rights Reserved, Design & Developed By Group 9</p>
         </div>
       </div>
     </div>
