--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PM-System | Patient Management System</title>
   {% include 'partials/_css.html' %}
+  {% block style %}
+  {% endblock style %}
 
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
 </head>
 
 
@@ -40,7 +42,7 @@
     {% include 'partials/_footer.html' %}
     <!--Footer End-->
     {% include 'partials/_js.html' %}
-
+  </div>
 </body>
 
 </html>
