--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -37,6 +37,7 @@
                 </li>
                 <li><a href="{% url 'services' %}">Services</a></li>
                 <li><a href="{% url 'doctors' %}">Doctors</a></li>
+
                 <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">Features <span class="fa fa-angle-down"></span></a>
                   <ul class="dropdown-menu">
@@ -44,11 +45,34 @@
                     <li><a href="{% url 'faqs' %}">Faqs</a></li>
                   </ul>
                 </li>
+
                 <li><a href="{% url 'contact' %}">Contact</a></li>
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
-                <li><a class="appoint" href="{% url 'appointment' %}">Appointment</a></li>
+
+                {% if user.is_authenticated %}
+
+                    <li class="dropdown"> 
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">
+                        <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle">
+                     </a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Profile</a></li>
+                        <li><a href="#">Appointment</a></li>
+                        <li><a href="#">Dashboard</a></li>
+
+                      </ul>
+                    </li>
+                {% else %}
+                <li><a class="appoint" href="#">Sign In</a></li>
+                {% endif %}
+
+
+
+
+                <li><a class="appoint" href="{% url 'registration_type' %}">Registration</a></li>
                 <li> <a id="menu-toggle" href="#" class="toggle"><img src="{% static 'heartcare/images/bars.png' %}"
                       alt=""></a> </li>
               </ul>
