--- a/templates/hospital/doctor_registation.html
+++ b/templates/hospital/doctor_registation.html
@@ -30,63 +30,27 @@
     <div class="container ">
         <div class="row ">
             <div class="col-md-12 py-5 bg-light mb-4 mt-4">
-                <div class="text px-4 form-level"> <br>
+                <div class="text px-4 form-level"><br>
                     <div class="text-center">
                         <h2 class="mb-4">Doctor Registration Form</h2>
                     </div>
                     <hr>
                     <div class="row">
                         <div class="col-md-12">
-                            <form id="application_form" enctype="multipart/form-data" class="form-register"
-                                  method="POST" accept-charset="UTF-8">
-
-                            {% csrf_token %}
-                            <div class="card card-hover mb-4">
-                                <div class="card-header text-center">
-                                    <span class="text-center-mar">Account Information *</span>
-                                </div>
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-md-9 set-midile">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    <div class="row">
-                                                       {% crispy signup  %}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                            <form id="application_form" action="" enctype="multipart/form-data" class="form-register" method="POST" accept-charset="UTF-8"
+                            data-upazila-url={% url 'load_upazila' %} data-district-url={% url 'load_district' %}>
+                                {% csrf_token %}
+                                <div class="card card-hover mb-4">
+                                    <div class="card-header text-center">
+                                        <span class="text-center-mar">Account Information *</span>
                                     </div>
-                                </div>
-
-                            </div>
-                            <div class="card card-hover mb-4">
-                                <div class="card-header text-center">
-                                    Provide Information<span class="required">*</span>
-                                </div>
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-md-10 set-midile">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    <div class="row">
-                                                      <div class="col-md-4">
-                                                            Full Name <span class="required">*</span>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.name|as_crispy_field }}
-                                                        </div>
-                                                         <div class="col-md-4">
-                                                            Experience <span class="required">*</span>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.experience|as_crispy_field }}
-                                                        </div>
-                                                        <div class="col-md-4">
-                                                            Speciality <span class="required">*</span>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.speciality|as_crispy_field }}
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-9 set-midile">
+                                                <div class="card">
+                                                    <div class="card-body">
+                                                        <div class="row">
+                                                            {% crispy signup %}
                                                         </div>
                                                     </div>
                                                 </div>
@@ -94,59 +58,35 @@
                                         </div>
                                     </div>
 
-                                    <div class="row secound_save">
-                                        <div class="col-md-10 set-midile ">
-                                            <div class="card">
-                                                <div class="card-header2">
-                                                    Full Address
-                                                </div>
-                                                <div class="card-body">
-                                                    <div class="row">
-                                                        <div class="col-md-4">
-                                                            Division <span class="required">*</span>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.division|as_crispy_field }}
-                                                        </div>
-                                                        <div class="col-md-4">
-                                                            District <span class="required">*</span>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.district|as_crispy_field }}
-                                                        </div>
-                                                        <div class="col-md-4">
-                                                            Upazila <span class="required">*</span>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.upazila|as_crispy_field }}
-                                                        </div>
-                                                        <div class="col-md-4">
-                                                            Post Code <span class="required">*</span>
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.post_code|as_crispy_field }}
-                                                        </div>
-                                                        <div class="col-md-4">
-                                                            Village/Road Address
-                                                        </div>
-                                                        <div class="col-md-8">
-                                                            {{ form.address|as_crispy_field }}
+                                </div>
+                                <div class="card card-hover mb-4">
+                                    <div class="card-header text-center">
+                                        Provide Information<span class="required">*</span>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row secound_save">
+                                            <div class="col-md-10 set-midile">
+                                                <div class="card">
+                                                    <div class="card-body">
+                                                        <div class="row">
+                                                            {% crispy form %}
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
+
                                     </div>
+
                                 </div>
 
-                            </div>
-
-                            <div class="text-center btn-set">
-                                <button class="btn btn-outline-info mt-4" type="submit" style="padding: 8px 30px;">
-                                    Submit for Registration
-                                </button>
-                            </div>
+                                <div class="text-center btn-set">
+                                    <button onclick="SubmitForm()" class="btn btn-outline-info mt-4" type="submit" style="padding: 8px 30px;" id="submit_form">
+                                        Submit for Registration
+                                    </button>
+                                </div>
                             </form>
+
                         </div>
                     </div>
                 </div>
@@ -154,6 +94,16 @@
         </div>
     </div>
 </section>
+
+<script>
+function SubmitForm() {
+    document.getElementById("application_form").submit();
+}
+
+
+</script>
+<script src="{% static 'custom/load_data.js' %}"></script>
+
 
 <!--Main Content End-->
 {% endblock maincontent %}
