--- a/templates/hospital/registation.html
+++ b/templates/hospital/registation.html
@@ -66,7 +66,7 @@
         <div class="modal-dialog">
             <div class="modal-content secound_save">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="DoctorModalLabel">Doctor Signup Form</h5>
+                    <h5 class="modal-title" id="DoctorModalLabel">Doctor Registration Form</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -105,7 +105,7 @@
         <div class="modal-dialog">
             <div class="modal-content secound_save_again">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="PatientModallLabel">Patient Signup Form</h5>
+                    <h5 class="modal-title" id="PatientModallLabel">Patient Registration Form</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
