--- a/templates/hospital/registation.html
+++ b/templates/hospital/registation.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary">Submit Form</button>
                 </div>
             </div>
         </div>
@@ -119,16 +119,16 @@
                             {{ form_patient.name|as_crispy_field }}
                         </div>
                        <div class="form-group">
-                            {{ form_patient.picture|as_crispy_field }}
+                            {{ form_patient.age|as_crispy_field }}
                         </div>
                        <div class="form-group">
-                            {{ form_patient.speciality|as_crispy_field }}
+                            {{ form_patient.nid|as_crispy_field }}
                         </div>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary">Submit Form</button>
                 </div>
             </div>
         </div>
