Sucessfully login and out added

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -68,9 +68,8 @@
                                              width="40" height="40" class="rounded-circle">
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">Profile</a></li>
-                                        <li><a href="#">Appointment</a></li>
                                         <li><a href="#">Dashboard</a></li>
+                                        <li><a href="{% url 'logout' %}">Logout</a></li>
 
                                     </ul>
                                 </li>
