--- a/staticfiles/custom/re_design.css
+++ b/staticfiles/custom/re_design.css
@@ -36,3 +36,53 @@
 h2.text-center.message {
     margin-bottom: 4%;
 }
+
+
+.item {
+    display: inline-block;
+    overflow: hidden;
+    padding: 1.2rem 3rem;
+    position: relative;
+    margin-bottom: 1rem;
+    min-width: 200px;
+    text-align: center;
+}
+
+/* rotate effect */
+.rotate {
+    border: 2px solid #d02537;
+    color: #d02537;
+    margin-left: 57px;
+    margin-bottom: 26px;
+    margin-top: -14px;
+}
+.rotate::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transform-origin: bottom left;
+    transform: rotate(-90deg);
+    transition: transform 0.2s;
+    background: #0e356c;
+}
+.rotate:hover::before {
+    transform: rotate(0deg);
+}
+.rotate:hover {
+    color: #fff;
+    background: #bf0311;
+}
+.requiredField{
+    color: #d64555;
+}
+form#login {
+    border: 2px solid #d64555;
+}
+.modal-body {
+    position: relative;
+    padding: 55px;
+}
