--- a/templates/hospital/login.html
+++ b/templates/hospital/login.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block maincontent %}
+
+{% block style %}
+    <link rel="stylesheet" href="{% static 'custom/re_design.css' %}"/>
+{% endblock %}
 <!--inner banner-->
 <div class="inner-banner">
     <div class="container">
@@ -30,27 +34,35 @@
                     {% csrf_token %}
 
                     <div class="modal-body">
-                        {% crispy form %}
+                        {{ form|crispy }}
                     </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button type="submit" class="item rotate">Login</button>
                 </form>
+
+
             </div>
             <div class="col-md-5">
                 <div class="contact-address">
                     <h5>Contact Information:</h5>
                     <ul>
-                        <li><span class="icon"><i class="fa fa-hospital-o" aria-hidden="true"></i></span> <span
-                                class="add-text">Cheryy Road, Wirral Road<br>
-                  Heart care Building,<br>
-                  United Kingdom</span></li>
-                        <li><span class="icon"><i class="fa fa-phone" aria-hidden="true"></i> </span> <span
-                                class="add-text">+110
-                  9876 5433<br>
-                  +440 6589 9874</span></li>
-                        <li><span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i> </span> <span
-                                class="add-text"><strong>For Inquiry:</strong> info@heartcare.com</span></li>
-                        <li><span class="icon"><i class="fa fa-globe" aria-hidden="true"></i> </span> <span
-                                class="add-text"><strong>For Details:</strong> www.Heartcare.com</span></li>
+                        <li>
+                            <span class="icon"><i class="fa fa-hospital-o" aria-hidden="true"></i></span>
+                            <span class="add-text">Cheryy Road, Wirral Road<br>Heart care Building,<br>United Kingdom</span>
+                        </li>
+                        <li><span class="icon">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                        </span> <span class="add-text">+110 9876 5433<br> +440 6589 9874</span>
+                        </li>
+
+                        <li>
+                            <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true">
+
+                            </i> </span> <span class="add-text"><strong>For Inquiry:</strong> info@heartcare.com</span>
+                        </li>
+                        <li>
+                            <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i> </span>
+                            <span class="add-text"><strong>For Details:</strong> www.Heartcare.com</span>
+                        </li>
                     </ul>
                 </div>
             </div>
