add Doctor dashboard

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -68,7 +68,7 @@
                                              width="40" height="40" class="rounded-circle">
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">Dashboard</a></li>
+                                        <li><a href="{% url 'doctor_dashboard' %}">Dashboard</a></li>
                                         <li><a href="{% url 'logout' %}">Logout</a></li>
 
                                     </ul>
