--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'doctor/css/main.css' %}">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      {% block extra_css  %}
+      {% endblock extra_css %}
   </head>
   <body class="app sidebar-mini">
     <!-- Navbar-->
@@ -112,7 +114,10 @@
         <li><a class="app-menu__item" href="docs.html"><i class="app-menu__icon fa fa-file-code-o"></i><span class="app-menu__label">Docs</span></a></li>
       </ul>
     </aside>
+
     <main class="app-content">
+      {% block body  %}
+      {% endblock %}
       <div class="app-title">
         <div>
           <h1><i class="fa fa-dashboard"></i> Dashboard</h1>
@@ -125,33 +130,33 @@
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-3">
-          <div class="widget-small primary coloured-icon"><i class="icon fa fa-users fa-3x"></i>
+          <div class="widget-small primary coloured-icon"><i class="icon fa fa-user-plus fa-3x"></i>
             <div class="info">
-              <h4>Users</h4>
+              <h4>Today's Appointment </h4>
               <p><b>5</b></p>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
-          <div class="widget-small info coloured-icon"><i class="icon fa fa-thumbs-o-up fa-3x"></i>
+          <div class="widget-small info coloured-icon"><i class="icon fa fa-users fa-3x"></i>
             <div class="info">
-              <h4>Likes</h4>
+              <h4>Total Appointment</h4>
               <p><b>25</b></p>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
-          <div class="widget-small warning coloured-icon"><i class="icon fa fa-files-o fa-3x"></i>
+          <div class="widget-small warning coloured-icon"><i class="icon fa fa-users fa-3x"></i>
             <div class="info">
-              <h4>Uploades</h4>
+              <h4>Total Patient</h4>
               <p><b>10</b></p>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
-          <div class="widget-small danger coloured-icon"><i class="icon fa fa-star fa-3x"></i>
+          <div class="widget-small danger coloured-icon"><i class="icon fa fas fa-user-md fa-3x"></i>
             <div class="info">
-              <h4>Stars</h4>
+              <h4>Total Doctor</h4>
               <p><b>500</b></p>
             </div>
           </div>
@@ -160,7 +165,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="tile">
-            <h3 class="tile-title">Monthly Sales</h3>
+            <h3 class="tile-title">Total Appointment</h3>
             <div class="embed-responsive embed-responsive-16by9">
               <canvas class="embed-responsive-item" id="lineChartDemo"></canvas>
             </div>
@@ -168,7 +173,7 @@
         </div>
         <div class="col-md-6">
           <div class="tile">
-            <h3 class="tile-title">Support Requests</h3>
+            <h3 class="tile-title">Appointment Rate</h3>
             <div class="embed-responsive embed-responsive-16by9">
               <canvas class="embed-responsive-item" id="pieChartDemo"></canvas>
             </div>
@@ -176,6 +181,8 @@
         </div>
       </div>
     </main>
+     {% block extra_ja  %}
+     {% endblock %}
     <!-- Essential javascripts for application to work-->
     <script src="{% static 'doctor/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'doctor/js/popper.min.js'  %}"></script>
