--- a/templates/partials/_css.html
+++ b/templates/partials/_css.html
@@ -8,4 +8,5 @@
 <link href="{% static 'heartcare/css/prettyPhoto.css' %}" rel="stylesheet">
 <link href="{% static 'heartcare/css/owl.carousel.min.css' %}" rel="stylesheet">
 <link href="{% static 'heartcare/css/bootstrap-datetimepicker.min.css' %}" rel="stylesheet">
+<link href="{% static 'custom/custom.css' %}" rel="stylesheet">
 <link rel="icon" type="image/png" href="{% static 'heartcare/images/logo_web.png' %}" />
