--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -60,13 +60,18 @@
                             <ul class="nav navbar-nav navbar-right">
 
                                 {% if user.is_authenticated %}
-
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                    <li href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                        aria-haspopup="true" aria-expanded="false">
-                                        <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg"
+                                        {% if object %}
+                                        <img src="{{ object.picture.url }}"
                                              width="40" height="40" class="rounded-circle">
-                                    </a>
+                                        {% else %}
+                                        <img src="{% static 'image/doctor.jpg' %}"
+                                             width="40" height="40" class="rounded-circle">
+                                        {% endif %}
+
+                                    </li>
                                     <ul class="dropdown-menu">
                                         <li><a href="{% url 'doctor_dashboard' %}">Dashboard</a></li>
                                         <li><a href="{% url 'logout' %}">Logout</a></li>
