--- a/templates/patient/update_patient.html
+++ b/templates/patient/update_patient.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 
 {% block maincontent %}
+{% block style %}
+    <link rel="stylesheet" href="{% static 'custom/re_design.css' %}"/>
+{% endblock %}
 <!--inner banner-->
 <div class="inner-banner">
   <div class="container">
@@ -34,7 +38,7 @@
             {{  form|crispy }}
           </div>
 
-          <button type="submit" class="item rotate">Submit</button>
+          <button type="submit" class="item rotate-update-p">Update</button>
         </form>
         </div>
         <div class="col-md-5">
