--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PM-System | Patient Management System</title>
-  {% include 'partials/_css.html' %}
   {% block style %}
   {% endblock style %}
+
+  {% include 'partials/_css.html' %}
 
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -45,6 +46,8 @@
     <!--Footer End-->
     {% include 'partials/_js.html' %}
   </div>
+{% block extra_js %}
+{% endblock extra_js %}
 </body>
 
 </html>
