--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -61,7 +61,7 @@
                             <ul class="nav navbar-nav navbar-right">
 
                                 {% if user.is_authenticated %}
-                                <li><a class="appoint" href="{% url 'login' %}">Appointment</a></li>
+                                <li><a class="appoint" href="{% url 'patient_ms:appointment' %}">Appointment</a></li>
 
                                 <li class="dropdown">
                                     <li href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
