Solved appitment problem

--- a/templates/appointment/index.html
+++ b/templates/appointment/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col-md-6"><img src="{% static 'heartcare/images/form-pic.jpg' %}" alt=""></div>
         <div class="col-md-6">
-          <form action="{% url 'appointment' %}" method="post">
+          <form action="" enctype="multipart/form-data" class="form-register" method="POST" accept-charset="UTF-8">
             {% csrf_token %}
             <div class="app-form">
               {{ form|crispy }}
@@ -56,7 +56,9 @@
 {% block extra_js %}
 <script>
 $(function () {
-  $("#id_appointment_time").datetimepicker();
+  $("#id_appointment_time").datetimepicker({
+    format:'DD/MM/YYYY HH:mm:ss',
+  })
 });
 </script>
 {% endblock extra_js %}
