Solved appointment problem

--- a/templates/appointment/appointment_filter.html
+++ b/templates/appointment/appointment_filter.html
@@ -1,4 +1,4 @@
 <option value="">---------</option>
 {% for object in object_list %}
-<option value="{{ district.pk }}">{{ object.name }}</option>
+<option value="{{ object.pk }}">{{ object.name }}</option>
 {% endfor %}
