Solved index problwm problem

--- a/templates/hospital/team-details.html
+++ b/templates/hospital/team-details.html
@@ -46,7 +46,7 @@
               <li><a class="insta" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
               <li><a class="ytp" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
             </ul>
-            <a class="book-app" href="#">Book an Appointment</a>
+            <a class="book-app" href="{% url 'patient_ms:appointment' %}">Book an Appointment</a>
           </div>
         </div>
       </div>
@@ -67,7 +67,6 @@
 
           <div class="team-slider">
             <div class="sectio-title-2"> <strong>Our Expert & Professional</strong>
-              <h2>Cardiologist</h2>
             </div>
 
             <div id="team-slider" class="owl-carousel owl-theme">
