--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -93,18 +93,13 @@
         <li><a class="app-menu__item active" href="{% url 'doctor_dashboard' %}"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">Today's appointment</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
-            <li><a class="treeview-item" href="bootstrap-components.html"><i class="icon fa fa-circle-o"></i>Checked</a></li>
-            <li><a class="treeview-item" href="https://fontawesome.com/v4.7.0/icons/" target="_blank" rel="noopener"><i class="icon fa fa-circle-o"></i>Uncheck</a></li>
+            <li><a class="treeview-item" href="{% url 'checked_appointment_list' %}"><i class="icon fa fa-circle-o"></i>Checked</a></li>
+            <li><a class="treeview-item" href="{% url 'uncheck_appointment_list' %}" target="_blank" rel="noopener"><i class="icon fa fa-circle-o"></i>Uncheck</a></li>
           </ul>
         </li>
-        <li><a class="app-menu__item" href="#"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">Find Patient</span></a></li>
+        <li><a class="app-menu__item" href="{% url 'patient_list' %}"><i class="app-menu__icon fa fa-pie-chart"></i><span class="app-menu__label">Find Patient</span></a></li>
 
-        <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">Notice</span><i class="treeview-indicator fa fa-angle-right"></i></a>
-          <ul class="treeview-menu">
-            <li><a class="treeview-item" href="#"><i class="icon fa fa-circle-o"></i> Publish Notice</a></li>
-            <li><a class="treeview-item" href="#"><i class="icon fa fa-circle-o"></i> Get Notice</a></li>
-          </ul>
-        </li>
+        
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-file-text"></i><span class="app-menu__label">Profile</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
             <li><a class="treeview-item" href="#"><i class="icon fa fa-circle-o"></i> Profile Details</a></li>
@@ -118,8 +113,6 @@
     </aside>
 
     <main class="app-content">
-      {% block body  %}
-      {% endblock %}
       <div class="app-title">
         <div>
           <h1><i class="fa fa-dashboard"></i> Dashboard</h1>
@@ -130,12 +123,14 @@
           <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
         </ul>
       </div>
+
+    {% block body  %}
       <div class="row">
         <div class="col-md-6 col-lg-3">
           <div class="widget-small primary coloured-icon"><i class="icon fa fa-user-plus fa-3x"></i>
             <div class="info">
               <h4>Today's Appointment </h4>
-              <p><b>5</b></p>
+              <p><b>{{ todays_appointment }}</b></p>
             </div>
           </div>
         </div>
@@ -143,7 +138,7 @@
           <div class="widget-small info coloured-icon"><i class="icon fa fa-users fa-3x"></i>
             <div class="info">
               <h4>Total Appointment</h4>
-              <p><b>25</b></p>
+              <p><b>{{ total_appointment }}</b></p>
             </div>
           </div>
         </div>
@@ -182,6 +177,7 @@
           </div>
         </div>
       </div>
+    {% endblock %}
     </main>
      {% block extra_ja  %}
      {% endblock %}
