--- a/templates/hospital/login.html
+++ b/templates/hospital/login.html
@@ -42,30 +42,31 @@
 
             </div>
             <div class="col-md-5">
-                <div class="contact-address">
-                    <h5>Contact Information:</h5>
-                    <ul>
-                        <li>
-                            <span class="icon"><i class="fa fa-hospital-o" aria-hidden="true"></i></span>
-                            <span class="add-text">Cheryy Road, Wirral Road<br>Heart care Building,<br>United Kingdom</span>
-                        </li>
-                        <li><span class="icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                        </span> <span class="add-text">+110 9876 5433<br> +440 6589 9874</span>
-                        </li>
+          <div class="contact-address">
+            <h5>Contact Information:</h5>
+            <ul>
+              <li> <span class="icon"><i class="fa fa-hospital-o" aria-hidden="true"></i></span> <span
+                  class="add-text">Mirpur 2,<br>
+                  Dhaka<br>
+                  Bangladesh</span> </li>
+              <li> <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i> </span> <span class="add-text">
+                +880 1843070993<br>
+                +880 1556640665</span> </li>
+              <li> <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i> </span> <span
+                  class="add-text"><strong>For Inquiry:</strong> info@pm-system.com</span> </li>
+              <li> <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i> </span>
+                <span class="add-text">
+                <strong>For Details:</strong>
+                  <a href="http://dkkundu.pythonanywhere.com/">
+                    dkkundu.pythonanywhere.com</a>
+                  <a href="https://pmsystemdk.herokuapp.com/">
+                    pmsystemdk.herokuapp.com</a>
+                </span>
 
-                        <li>
-                            <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true">
-
-                            </i> </span> <span class="add-text"><strong>For Inquiry:</strong> info@heartcare.com</span>
-                        </li>
-                        <li>
-                            <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i> </span>
-                            <span class="add-text"><strong>For Details:</strong> www.Heartcare.com</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+              </li>
+            </ul>
+          </div>
+        </div>
         </div>
     </div>
 </div>
